<resources>
    <string name="app_name">IpsGroup</string>
    <string name="main_appname">IPS GROUP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_verification">Verification</string>
    <string name="tv_enterotp">Enter mobile No</string>
    <string name="tv_enterotp_">Enter OTP sent on mobile No</string>
    <string name="tv_otpheadtv">OTP verification</string>
    <string name="tv_dashboard">Dashboard</string>
    <string name="welcome">Welcome Back</string>
    <string name="ed_username">User Name</string>
    <string name="verify">Verify</string>
    <string name="tv_login">Login</string>
    <string name="attendance">Attendance and Team</string>
    <string name="teamperformance">Team Performance</string>
    <string name="travel">Travel and Reimbrusment</string>
    <string name="adminmanagement">Admin and Management</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="tv_announcement">Announce</string>
    <string name="tv_contact">Contacts</string>
    <string name="tv_homemain">Home</string>
    <string name="tv_team">Team</string>
    <string name="tv_myaccount">MyAccount</string>
    <string name="tv_calendar">Calendar</string>
    <string name="tv_user">User</string>
    <string name="tv_day">MON</string>
    <string name="tv_time">09:41</string>
    <string name="tv_sec">23</string>
    <string name="tv_ampm">Am</string>
    <string name="tv_fingerprint_dlg">Punch In Puch Out</string>


    <string name="home_icon">&#xe919;</string>
    <string name="contact_icon">&#xe918;</string>
    <string name="announcement_icon">&#xe917;</string>
    <string name="team_icon">&#xe91a;</string>
    <string name="myacc_icon">&#xe91b;</string>
    <string name="attendance_icon_">&#xe906;</string>
    <string name="teamicon_color">&#xe912;</string>
    <string name="travelicon_color">&#xe926;</string>
    <string name="otpicon_color">&#xe927;</string>
    <string name="adminicon_color">&#xe905;</string>
    <string name="back_icon">&#xe908;</string>
    <string name="calendaricon_color">&#xe907;</string>
    <string name="usericon_color">&#xf2c0;</string>
    <string name="checkmarkicon_color">&#xe911;</string>
    <string name="timeinicon_color">&#xe915;</string>
    <string name="timeouticon_color">&#xe916;</string>
    <string name="approveicon_color">&#xe913;</string>
    <string name="cancelicon_color">&#xe914;</string>
    <string name="mail_icon">&#xe921;</string>
    <string name="att_approvalmodify_icon">&#xe920;</string>
    <string name="search_icon">&#xf002;</string>
    <string name="adjust_icon">&#xe92a;</string>
    <string name="call_icon">&#xe92b;</string>
    <string name="mail1_icon">&#xe92c;</string>
    <string name="mail2_icon">&#xe92d;</string>
    <string name="contact_person_icon">&#xe92e;</string>
    <string name="outlet_icon">&#xe92f;</string>
    <string name="landmark_icon">&#xe930;</string>
    <string name="address_icon">&#xe931;</string>
    <string name="upload_icon">&#xe932;</string>
    <string name="upload1_icon">&#xe933;</string>
    <string name="interview_candi_icon">&#xe934;</string>
    <string name="join_candi_icon">&#xe935;</string>
    <string name="total_sub_icon">&#xe937;</string>
    <string name="shortlist_icon">&#xe93a;</string>
    <string name="offer_candi_icon">&#xe939;</string>
    <string name="selected_candi_icon">&#xe938;</string>
    <string name="loc_icon">&#xe93b;</string>
    <string name="department_icon">&#xe93c;</string>

    //attendance fragment
    <string name="att_leaveicon_color">&#xe909;</string>
    <string name="att_approvalicon_color">&#xe90a;</string>
    <string name="att_attendanceicon_color">&#xe90b;</string>
    <string name="att_historyicon_color">&#xe90c;</string>
    <string name="att_teamatticon_color">&#xe90d;</string>
    <string name="att_calendaricon_color">&#xe90e;</string>
    <string name="att_trackicon_color">&#xe90f;</string>
    <string name="user_icon">&#xe976;</string>
    <string name="cmd_icon">&#xe924;</string>
    <string name="bottom_arrow_icon">&#xe925;</string>
    <string name="bottom_arrow_icon1">&#xe928;</string>
    <string name="bottom_arrow_icon2">&#xe929;</string>

    //apply leave
    <string name="att_leavearrowicon_color">&#xe91f;</string>

    //Team attendance

    <string name="t_att_timeinicon_color">&#xe91c;</string>
    <string name="t_att_timeouticon_color">&#xe91e;</string>
    <string name="attendance_icon">&#xe923;</string>
    <string name="leave_icon">&#xe922;</string>


    //fingerprint
    <string name="fing_icon_color">&#xe910;</string>
    <string name="fing_locationicon_color">&#xe047;</string>
    <string name="file_limit_size_upload_format">Files must be less than %sMB</string>
    <string name="password">★★★★★</string>
    <string name="attendance_person">Attendance</string>
    <string name="_2019_8_17">2019–08–17</string>
    <string name="status">Status</string>
    <string name="apply">APPLY</string>
    <string name="others">Others</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="comments">Comments</string>
    <string name="leave_comments">Leave Comments</string>
    <string name="select_leave_type">Select Leave Type</string>
    <string name="leave_dates">Leave Dates</string>
    <string name="_2">2</string>
    <string name="no_data_found">No Data Found</string>
    <string name="demo_gmail_com">demo@gmail.com</string>
    <string name="location">Location</string>
    <string name="comments_here">Comments here</string>
    <string name="leave">Leave</string>
    <string name="search">Search</string>
    <string name="in_time">In Time</string>
    <string name="out_time">Out Time</string>
    <string name="days">Days</string>
    <string name="submit">SUBMIT</string>
    <string name="planned_unplanned">Planned/UnPlanned</string>
    <string name="select">Select</string>
    <string name="_10_00">00:00</string>
    <string name="leave_type">Leave Type</string>
    <string name="approval_comments">Approval Comments</string>
    <string name="track_team">Track Team</string>
    <string name="team_performance">Team Performance</string>
    <string name="account_info">Account Info</string>
    <string name="my_account">My Account</string>
    <string name="person">Person</string>
    <string name="hr">HR</string>
    <string name="some_person">Some person</string>
    <string name="reporting_manager">Reporting Manager</string>
    <string name="employee">Employee</string>
    <string name="department">Department</string>
    <string name="managing_director">Managing Director</string>
    <string name="designation">Designation</string>
    <string name="_9578945612">9578945612</string>
    <string name="mobile_no">Mobile No</string>
    <string name="mapapi">AIzaSyD8eH4l0X0E2kAYFZCF9VUx5f2-f5lpbSQ</string>
    <string name="query_type">Query Type</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="submit_issue">Submit Issue</string>
    <string name="issue_tracker">Issue Tracker</string>
    <string name="admin_management">Admin Management</string>
    <string name="issue_tracker_list">Issue Tracker List</string>
    <string name="leave_approval">Leave Approval</string>
    <string name="approvalat">ApprovalAT</string>
    <string name="track_attendance">Track Attendance</string>
    <string name="your_clock_in">Your Clockin And ClockOut Details Visible here</string>
    <string name="leave_information">Leave Information</string>
    <string name="apply_leave">Apply leave</string>
    <string name="team_attendance">Team Attendance</string>
    <string name="team_map">Team Map</string>
    <string name="attendance_amp_team"><![CDATA[Attendance & Team]]></string>
    <string name="star">****</string>
    <string name="customers">Customers</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_code">Customer Code</string>
    <string name="email_id">Email ID</string>
    <string name="contact_person">Contact Person</string>
    <string name="outlet_type">Outlet Type</string>
    <string name="landmark">Landmark</string>
    <string name="address">Address</string>
    <string name="attendance_approval">Attendance Approval</string>
    <string name="issue_approval">Issue Approval</string>
    <string name="hr_help_desk">HR Help Desk</string>
    <string name="attendance_">Attendance</string>
    <string name="approvals">Approvals</string>
    <string name="dsr">DSR</string>
    <string name="submission_form">Submission Form</string>
    <string name="daily_sales">Daily Sales</string>
    <string name="next_followup">Next Followup Date</string>
    <string name="add_form">Add Form</string>
    <string name="submission_date">Submission Date</string>
    <string name="total_submission">Total Submission</string>
    <string name="c_v_shortlisted">C.V Shortlisted</string>
    <string name="interview_schedule">Interview Schedule</string>
    <string name="selected_candidate">Selected Candidate</string>
    <string name="offered_candidate">Offered Candidate</string>
    <string name="joined_candidate">Joined Candidate</string>
    <string name="dd_mm_yyyy">yyyy-MM-dd</string>
    <string name="remark">Remark</string>
    <string name="attendance_history">Attendance History</string>
    <string name="logout">Logout</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reason">Reason</string>
    <string name="adjust_attendance">Adjust Attendance</string>
    <string name="in_google_maps_navigation">In Google Maps Navigation</string>
    <string name="select_department">Select Department</string>
    <string name="select_query_type">Select Query Type</string>
    <string name="issue">Issue</string>
    <string name="announcement">Announcement</string>
    <string name="training">Training</string>
    <string name="description_location_must_be_on_high_accuracy">Description: Location must be on High Accuracy</string>
    <string name="description_training_completed">Description: Training Completed</string>
    <string name="update_the_application">Update the Application</string>
    <string name="description_dear_all_team_kindly_update_your_ips_tracker_mobile_add">Description: Dear all team, Kindly update your IPS Tracker mobile add</string>
    <string name="select_status">Select Status</string>
    <string name="type">Type</string>
    <string name="position">Position</string>

    <string-array name="arrayvalues">
        <item>hello</item>
        <item>hi</item>
    </string-array>
</resources>
