<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:background="@color/light_gray_"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/bg_toolbar_color"
        android:id="@+id/back_icon"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <TextView
            android:id="@+id/tv_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back_icon"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/announcement"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="12sp"
            android:textColor="@color/light_gray"
            android:padding="2dp"
            android:text="@string/training"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textColor="@color/light_gray"
            android:padding="2dp"
            android:text="@string/description_training_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/light_gray"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/light_gray"
            android:padding="2dp"
            android:text="@string/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textColor="@color/light_gray"
            android:padding="2dp"
            android:text="@string/description_location_must_be_on_high_accuracy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/light_gray"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/light_gray"
            android:padding="2dp"
            android:text="@string/update_the_application"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textColor="@color/light_gray"
            android:padding="2dp"
            android:text="@string/description_dear_all_team_kindly_update_your_ips_tracker_mobile_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/light_gray"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>
    </LinearLayout>

</LinearLayout>