<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".login_reg.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/login_background"
        android:contentDescription="@string/submit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/submit"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="130dp"
            android:background="@drawable/splash_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@null"
                android:ems="10"
                android:hint="@string/ed_username"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textAlignment="center" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <EditText
                android:gravity="center"
                android:id="@+id/ed_password"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@null"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAlignment="center" />

        </android.support.v7.widget.CardView>

        <uihelper.ripple.MaterialRippleLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/white"
        app:mrl_rippleDelayClick="true"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

            <github.ishaan.buttonprogressbar.ButtonProgressBar
                android:id="@+id/bt_login"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_state"
                android:text="@string/verify"
                app:bgColor="@color/lightblue"
                app:progColor="@color/loading_blue"
                app:text="@string/tv_login"
                app:textColor="@android:color/white"
                app:type="indeterminate" />
        </uihelper.ripple.MaterialRippleLayout>
        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/forgotpassword"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>