<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/planned_unplanned"
        android:textColor="@color/lightblue" />
    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edt_bg_rect"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <Spinner
            android:padding="6dp"
            android:id="@+id/spinner_plan_un_plan"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:imeOptions="actionSearch"
            android:inputType="textAutoComplete"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/status"
        android:textColor="@color/lightblue" />

    <RelativeLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edt_bg_rect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_status_type"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/select_status"
            android:textColor="@color/gray" />
        <Spinner
            android:textSize="14sp"
            android:id="@+id/spinner_status_type"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:ems="10"
            android:padding="6dp"
            android:focusable="false"
            android:imeOptions="actionSearch"
            android:inputType="textAutoComplete"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/comments"
        android:textColor="@color/lightblue" />
    <EditText
        android:textSize="14sp"
        android:layout_margin="8dp"
        android:id="@+id/et_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_bg_rect"
        android:hint="@string/comments_here"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:focusable="true"
        android:maxLength="120"
        android:maxLines="3"
        android:padding="10dp" />
    <uihelper.ripple.MaterialRippleLayout
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/white"
        app:mrl_rippleDelayClick="true"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">
        <TextView
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:id="@+id/tv_leave_approval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_round_"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </uihelper.ripple.MaterialRippleLayout>
</LinearLayout>



